--- a/ToyNeuralNetwork/ToyNeuralNetwork.csproj
+++ b/ToyNeuralNetwork/ToyNeuralNetwork.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivationFunction.cs" />
+    <Compile Include="DataPair.cs" />
     <Compile Include="NeuralNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
